[package]
name = "xudt-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0.63"
secp256k1 = { version = "0.24", features = ["recovery"] }

ckb-types = "0.115.0-rc2"
ckb-jsonrpc-types = "0.115.0-rc2"
ckb-hash = "0.115.0-rc2"
ckb-sdk = "3.1.1"

[dev-dependencies]
hex = "0.4.3"